--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@angular/router": "^9.1.0",
     "bootstrap": "^4.4.1",
     "core-js": "^3.6.4",
+    "html5": "^1.0.5",
     "jquery": "1.9.1 - 3",
     "popper.js": "^1.16.0",
     "rxjs": "^6.5.4",
